src/main/gen/yggdrasil/psi/parser/YggdrasilParser.java
// This is a generated file. Not intended for manual editing.
package yggdrasil.psi.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.TokenSet;

import static yggdrasil.psi.ParserExtension.*;
import static yggdrasil.psi.YggdrasilTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class YggdrasilParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, EXTENDS_SETS_);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return root(b, l + 1);
    }

    public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[]{
            create_token_set_(IDENTIFIER, IDENTIFIER_FREE),
            create_token_set_(ATOMIC, EXPRESSION, EXPRESSION_CHOICE, EXPRESSION_GROUP,
                    EXPRESSION_HARD, EXPRESSION_SOFT, EXPRESSION_TAG, TERM),
    };

    /* ********************************************************** */
    // attribute* modifier*
    public static boolean annotations(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "annotations")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ANNOTATIONS, "<annotations>");
        r = annotations_0(b, l + 1);
        r = r && annotations_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // attribute*
    private static boolean annotations_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "annotations_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!attribute(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "annotations_0", c)) break;
        }
        return true;
    }

    // modifier*
    private static boolean annotations_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "annotations_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!modifier(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "annotations_1", c)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // (identifier-free EQ)? value {
    // //    mixin = "yggdrasil.psi.mixin.MixinTuple"
    // }
    public static boolean argument(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
        r = argument_0(b, l + 1);
        r = r && value(b, l + 1);
        r = r && argument_2(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // (identifier-free EQ)?
    private static boolean argument_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument_0")) return false;
        argument_0_0(b, l + 1);
        return true;
    }

    // identifier-free EQ
    private static boolean argument_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "argument_0_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = identifier_free(b, l + 1);
        r = r && consumeToken(b, EQ);
        exit_section_(b, m, null, r);
        return r;
    }

    // {
    // //    mixin = "yggdrasil.psi.mixin.MixinTuple"
    // }
    private static boolean argument_2(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // expression-group | identifier-free | escape | string | regex | function-call | number
    public static boolean atomic(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "atomic")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, ATOMIC, "<atomic>");
        r = expression_group(b, l + 1);
        if (!r) r = identifier_free(b, l + 1);
        if (!r) r = escape(b, l + 1);
        if (!r) r = string(b, l + 1);
        if (!r) r = regex(b, l + 1);
        if (!r) r = function_call(b, l + 1);
        if (!r) r = number(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // (AT|HASH) identifier tuple?
    public static boolean attribute(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "attribute")) return false;
        if (!nextTokenIs(b, "<attribute>", AT, HASH)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE, "<attribute>");
        r = attribute_0(b, l + 1);
        r = r && identifier(b, l + 1);
        p = r; // pin = 2
        r = r && attribute_2(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // AT|HASH
    private static boolean attribute_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "attribute_0")) return false;
        boolean r;
        r = consumeToken(b, AT);
        if (!r) r = consumeToken(b, HASH);
        return r;
    }

    // tuple?
    private static boolean attribute_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "attribute_2")) return false;
        tuple(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // BRACE_L (key EQ)? identifier-free BRACE_R
    public static boolean category(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "category")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && category_1(b, l + 1);
        r = r && identifier_free(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, CATEGORY, r);
        return r;
    }

    // (key EQ)?
    private static boolean category_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "category_1")) return false;
        category_1_0(b, l + 1);
        return true;
    }

    // key EQ
    private static boolean category_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "category_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = key(b, l + 1);
        r = r && consumeToken(b, EQ);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // annotations KW_CLASS identifier class-cast? OP_REMARK? class-body
    public static boolean class_$(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_$")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, CLASS, "<class $>");
        r = annotations(b, l + 1);
        r = r && consumeToken(b, KW_CLASS);
        p = r; // pin = 2
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, class_3(b, l + 1)) && r;
        r = p && report_error_(b, class_4(b, l + 1)) && r;
        r = p && class_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // class-cast?
    private static boolean class_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_3")) return false;
        class_cast(b, l + 1);
        return true;
    }

    // OP_REMARK?
    private static boolean class_4(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_4")) return false;
        consumeToken(b, OP_REMARK);
        return true;
    }

    /* ********************************************************** */
    // BRACE_L OP_OR? expression? BRACE_R
    public static boolean class_body(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_body")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && class_body_1(b, l + 1);
        r = r && class_body_2(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, CLASS_BODY, r);
        return r;
    }

    // OP_OR?
    private static boolean class_body_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_body_1")) return false;
        consumeToken(b, OP_OR);
        return true;
    }

    // expression?
    private static boolean class_body_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_body_2")) return false;
        expression(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // TO identifier
    public static boolean class_cast(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "class_cast")) return false;
        if (!nextTokenIs(b, TO)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TO);
        r = r && identifier(b, l + 1);
        exit_section_(b, m, CLASS_CAST, r);
        return r;
    }

    /* ********************************************************** */
    // annotations KW_MACRO identifier-free function-parameter function-block
    public static boolean define_function(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "define_function")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DEFINE_FUNCTION, "<define function>");
        r = annotations(b, l + 1);
        r = r && consumeToken(b, KW_MACRO);
        p = r; // pin = 2
        r = r && report_error_(b, identifier_free(b, l + 1));
        r = p && report_error_(b, function_parameter(b, l + 1)) && r;
        r = p && function_block(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // annotations KW_UNION identifier OP_REMARK? union-body
    public static boolean define_union(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "define_union")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, DEFINE_UNION, "<define union>");
        r = annotations(b, l + 1);
        r = r && consumeToken(b, KW_UNION);
        p = r; // pin = 2
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && report_error_(b, define_union_3(b, l + 1)) && r;
        r = p && union_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // OP_REMARK?
    private static boolean define_union_3(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "define_union_3")) return false;
        consumeToken(b, OP_REMARK);
        return true;
    }

    /* ********************************************************** */
    // ESCAPED category? {
    // }
    public static boolean escape(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "escape")) return false;
        if (!nextTokenIs(b, ESCAPED)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, ESCAPED);
        r = r && escape_1(b, l + 1);
        r = r && escape_2(b, l + 1);
        exit_section_(b, m, ESCAPE, r);
        return r;
    }

    // category?
    private static boolean escape_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "escape_1")) return false;
        category(b, l + 1);
        return true;
    }

    // {
    // }
    private static boolean escape_2(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // expression-choice {
    // }
    public static boolean expression(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION, "<expression>");
        r = expression_choice(b, l + 1);
        r = r && expression_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // {
    // }
    private static boolean expression_1(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // expression-hard (OP_OR expression-hard)*
    public static boolean expression_choice(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_choice")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION_CHOICE, "<expression choice>");
        r = expression_hard(b, l + 1);
        r = r && expression_choice_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // (OP_OR expression-hard)*
    private static boolean expression_choice_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_choice_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!expression_choice_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "expression_choice_1", c)) break;
        }
        return true;
    }

    // OP_OR expression-hard
    private static boolean expression_choice_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_choice_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, OP_OR);
        r = r && expression_hard(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // PARENTHESIS_L OP_OR? expression PARENTHESIS_R
    public static boolean expression_group(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_group")) return false;
        if (!nextTokenIs(b, PARENTHESIS_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PARENTHESIS_L);
        r = r && expression_group_1(b, l + 1);
        r = r && expression(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, m, EXPRESSION_GROUP, r);
        return r;
    }

    // OP_OR?
    private static boolean expression_group_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_group_1")) return false;
        consumeToken(b, OP_OR);
        return true;
    }

    /* ********************************************************** */
    // expression-soft (OP_CONCAT expression-soft)*
    public static boolean expression_hard(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_hard")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION_HARD, "<expression hard>");
        r = expression_soft(b, l + 1);
        r = r && expression_hard_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // (OP_CONCAT expression-soft)*
    private static boolean expression_hard_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_hard_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!expression_hard_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "expression_hard_1", c)) break;
        }
        return true;
    }

    // OP_CONCAT expression-soft
    private static boolean expression_hard_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_hard_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, OP_CONCAT);
        r = r && expression_soft(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // expression-tag expression-tag*
    public static boolean expression_soft(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_soft")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION_SOFT, "<expression soft>");
        r = expression_tag(b, l + 1);
        r = r && expression_soft_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // expression-tag*
    private static boolean expression_soft_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_soft_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!expression_tag(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "expression_soft_1", c)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // (identifier-free COLON)? term
    public static boolean expression_tag(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_tag")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, EXPRESSION_TAG, "<expression tag>");
        r = expression_tag_0(b, l + 1);
        r = r && term(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // (identifier-free COLON)?
    private static boolean expression_tag_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_tag_0")) return false;
        expression_tag_0_0(b, l + 1);
        return true;
    }

    // identifier-free COLON
    private static boolean expression_tag_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "expression_tag_0_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = identifier_free(b, l + 1);
        r = r && consumeToken(b, COLON);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // BRACE_L OP_OR? expression? BRACE_R
    public static boolean function_block(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_block")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && function_block_1(b, l + 1);
        r = r && function_block_2(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, FUNCTION_BLOCK, r);
        return r;
    }

    // OP_OR?
    private static boolean function_block_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_block_1")) return false;
        consumeToken(b, OP_OR);
        return true;
    }

    // expression?
    private static boolean function_block_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_block_2")) return false;
        expression(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // AT identifier-free tuple?
    public static boolean function_call(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_call")) return false;
        if (!nextTokenIs(b, AT)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL, null);
        r = consumeToken(b, AT);
        r = r && identifier_free(b, l + 1);
        p = r; // pin = 2
        r = r && function_call_2(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // tuple?
    private static boolean function_call_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_call_2")) return false;
        tuple(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // PARENTHESIS_L (parameter (COMMA parameter)* COMMA?)? PARENTHESIS_R
    public static boolean function_parameter(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter")) return false;
        if (!nextTokenIs(b, PARENTHESIS_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PARENTHESIS_L);
        r = r && function_parameter_1(b, l + 1);
        r = r && consumeToken(b, PARENTHESIS_R);
        exit_section_(b, m, FUNCTION_PARAMETER, r);
        return r;
    }

    // (parameter (COMMA parameter)* COMMA?)?
    private static boolean function_parameter_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter_1")) return false;
        function_parameter_1_0(b, l + 1);
        return true;
    }

    // parameter (COMMA parameter)* COMMA?
    private static boolean function_parameter_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = parameter(b, l + 1);
        r = r && function_parameter_1_0_1(b, l + 1);
        r = r && function_parameter_1_0_2(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (COMMA parameter)*
    private static boolean function_parameter_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter_1_0_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!function_parameter_1_0_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "function_parameter_1_0_1", c)) break;
        }
        return true;
    }

    // COMMA parameter
    private static boolean function_parameter_1_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter_1_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && parameter(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // COMMA?
    private static boolean function_parameter_1_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "function_parameter_1_0_2")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // annotations KW_GRAMMAR identifier grammar-body
    public static boolean grammar(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "grammar")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GRAMMAR, "<grammar>");
        r = annotations(b, l + 1);
        r = r && consumeToken(b, KW_GRAMMAR);
        p = r; // pin = 2
        r = r && report_error_(b, identifier(b, l + 1));
        r = p && grammar_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // BRACE_L grammar-term* BRACE_R
    public static boolean grammar_body(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "grammar_body")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && grammar_body_1(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, GRAMMAR_BODY, r);
        return r;
    }

    // grammar-term*
    private static boolean grammar_body_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "grammar_body_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!grammar_term(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "grammar_body_1", c)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // pair | COMMA | SEMICOLON
    public static boolean grammar_term(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "grammar_term")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, GRAMMAR_TERM, "<grammar term>");
        r = pair(b, l + 1);
        if (!r) r = consumeToken(b, COMMA);
        if (!r) r = consumeToken(b, SEMICOLON);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // annotations KW_GROUP identifier-free? group-body
    public static boolean group(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, GROUP, "<group>");
        r = annotations(b, l + 1);
        r = r && consumeToken(b, KW_GROUP);
        p = r; // pin = 2
        r = r && report_error_(b, group_2(b, l + 1));
        r = p && group_body(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // identifier-free?
    private static boolean group_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group_2")) return false;
        identifier_free(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // BRACE_L group-term* BRACE_R
    public static boolean group_body(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group_body")) return false;
        if (!nextTokenIs(b, BRACE_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, BRACE_L);
        r = r && group_body_1(b, l + 1);
        r = r && consumeToken(b, BRACE_R);
        exit_section_(b, m, GROUP_BODY, r);
        return r;
    }

    // group-term*
    private static boolean group_body_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group_body_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!group_term(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "group_body_1", c)) break;
        }
        return true;
    }

    /* ********************************************************** */
    // attribute* identifier* EQ atomic
    public static boolean group_item(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group_item")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, GROUP_ITEM, "<group item>");
        r = group_item_0(b, l + 1);
        r = r && group_item_1(b, l + 1);
        r = r && consumeToken(b, EQ);
        r = r && atomic(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // attribute*
    private static boolean group_item_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "group_item_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!attribute(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "group_item_0", c)) break;
        }
        return true;
    }
